fixes properties for progress bar in dark mode

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1078,6 +1078,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.dark .progress-bar.fixed-nav{
+    --tw-bg-opacity: 1;
+    background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}
 .step-wizard-list{
     position: relative;
     z-index: 2;
@@ -1256,13 +1260,19 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 59.5rem;
 }
 .form-wrapper-responsive.kesejahteraan{
-    height: 34.8rem;
+    height: 49.5rem;
 }
 .form-wrapper-responsive.cetak-bukti{
-    height: 75rem;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    padding-bottom: 2.5rem;
+}
+.form-wrapper-responsive.cetak-bukti .cetak-pendaftaran-wrapper{
+    position: relative;
 }
 .progress-bar.fixed-nav ~ .form-section{
-    margin-top: 104px;
+    margin-top: 117px;
 }
 .form-section form{
     position: relative;
@@ -1406,7 +1416,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
     opacity: 0.8;
 }
-.dropzone#img-upload{
+.dropzone{
     border-radius: 0.75rem;
     border-width: 2px;
     border-color: rgb(0 153 255 / var(--tw-border-opacity));
@@ -1866,10 +1876,6 @@ div.dropzone{
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
 }
-.my-1{
-    margin-top: 0.25rem;
-    margin-bottom: 0.25rem;
-}
 .my-4{
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -1877,6 +1883,10 @@ div.dropzone{
 .mx-4{
     margin-left: 1rem;
     margin-right: 1rem;
+}
+.my-1{
+    margin-top: 0.25rem;
+    margin-bottom: 0.25rem;
 }
 .ml-1{
     margin-left: 0.25rem;
@@ -1911,14 +1921,14 @@ div.dropzone{
 .mb-1{
     margin-bottom: 0.25rem;
 }
-.mb-2{
-    margin-bottom: 0.5rem;
-}
 .mb-6{
     margin-bottom: 1.5rem;
 }
 .mt-auto{
     margin-top: auto;
+}
+.mb-2{
+    margin-bottom: 0.5rem;
 }
 .block{
     display: block;
@@ -1957,9 +1967,6 @@ div.dropzone{
     height: -webkit-max-content;
     height: -moz-max-content;
     height: max-content;
-}
-.h-\[22rem\]{
-    height: 22rem;
 }
 .h-20{
     height: 5rem;
@@ -2076,6 +2083,21 @@ div.dropzone{
 .overflow-x-hidden{
     overflow-x: hidden;
 }
+.whitespace-normal{
+    white-space: normal;
+}
+.whitespace-nowrap{
+    white-space: nowrap;
+}
+.whitespace-pre{
+    white-space: pre;
+}
+.whitespace-pre-line{
+    white-space: pre-line;
+}
+.whitespace-pre-wrap{
+    white-space: pre-wrap;
+}
 .rounded-lg{
     border-radius: 0.5rem;
 }
@@ -2189,9 +2211,9 @@ div.dropzone{
     padding-left: 0.75rem;
     padding-right: 0.75rem;
 }
-.px-\[28rem\]{
-    padding-left: 28rem;
-    padding-right: 28rem;
+.px-\[11rem\]{
+    padding-left: 11rem;
+    padding-right: 11rem;
 }
 .py-3{
     padding-top: 0.75rem;
@@ -2234,8 +2256,11 @@ div.dropzone{
 .pl-4{
     padding-left: 1rem;
 }
-.pb-2{
-    padding-bottom: 0.5rem;
+.pr-2{
+    padding-right: 0.5rem;
+}
+.pl-2{
+    padding-left: 0.5rem;
 }
 .text-center{
     text-align: center;
@@ -2258,9 +2283,6 @@ div.dropzone{
 .text-xl{
     font-size: 1.25rem;
     line-height: 1.75rem;
-}
-.text-\[4rem\]{
-    font-size: 4rem;
 }
 .text-base{
     font-size: 1rem;
@@ -2340,10 +2362,6 @@ div.dropzone{
     --tw-text-opacity: 1;
     color: rgb(63 63 70 / var(--tw-text-opacity));
 }
-.text-\[\#0099ff\]{
-    --tw-text-opacity: 1;
-    color: rgb(0 153 255 / var(--tw-text-opacity));
-}
 .text-zinc-600{
     --tw-text-opacity: 1;
     color: rgb(82 82 91 / var(--tw-text-opacity));
@@ -2355,6 +2373,10 @@ div.dropzone{
 .text-red-400{
     --tw-text-opacity: 1;
     color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+.text-\[\#0099ff\]{
+    --tw-text-opacity: 1;
+    color: rgb(0 153 255 / var(--tw-text-opacity));
 }
 .underline{
     -webkit-text-decoration-line: underline;
@@ -2402,12 +2424,12 @@ div.dropzone{
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.dropzone#img-upload .dz-preview .dz-success-mark svg {
+.dropzone .dz-preview .dz-success-mark svg {
     filter: invert(45%) sepia(39%) saturate(1191%) hue-rotate(80deg)
         brightness(101%) contrast(104%);
 }
 
-.dropzone#img-upload .dz-preview .dz-error-mark svg {
+.dropzone .dz-preview .dz-error-mark svg {
     filter: invert(10%) sepia(84%) saturate(7177%) hue-rotate(371deg)
         brightness(101%) contrast(103%);
 }
@@ -2680,6 +2702,14 @@ div.dropzone{
     .lg\:text-3xl{
         font-size: 1.875rem;
         line-height: 2.25rem;
+    }
+}
+
+@media (min-width: 1536px){
+
+    .\32xl\:px-\[28rem\]{
+        padding-left: 28rem;
+        padding-right: 28rem;
     }
 }
 
